--- a/vrons-immigration/package.json
+++ b/vrons-immigration/package.json
@@ -8,8 +8,11 @@
     "@mui/material": "^6.4.4",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
+    "navigate": "^0.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
